--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -203,6 +203,7 @@
     <ClInclude Include="..\Public\EffectMeteoExpolFire.h" />
     <ClInclude Include="..\Public\EffectMeteoExpolRing.h" />
     <ClInclude Include="..\Public\EffectSmoke.h" />
+    <ClInclude Include="..\Public\Element_Bomb.h" />
     <ClInclude Include="..\Public\Fire_Boob.h" />
     <ClInclude Include="..\Public\Fire_explosion.h" />
     <ClInclude Include="..\Public\MeteoFireBall.h">
@@ -359,6 +360,7 @@
     <ClCompile Include="..\Private\EffectSmoke.cpp" />
     <ClCompile Include="..\Private\EffectSwordRing.cpp" />
     <ClCompile Include="..\Private\EffectMeteoTrail.cpp" />
+    <ClCompile Include="..\Private\Element_Bomb.cpp" />
     <ClCompile Include="..\private\ElfNPC.cpp" />
     <ClCompile Include="..\private\El_Flogas.cpp" />
     <ClCompile Include="..\Private\Enemy.cpp" />
