--- a/Assets/Scenes/Dungeon1_SY.yaml
+++ b/Assets/Scenes/Dungeon1_SY.yaml
@@ -50,8 +50,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0.000360000937, 0, -7.03210389e-06]
-      Rotation: [62.884613, 9.58471203, 0]
-      Scale: [0.49850437, 0.498444825, 0.99580431]
+      Rotation: [39.0822563, 16.117548, 0]
+      Scale: [0.478587896, 0.492284685, 0.974608839]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -77,6 +77,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
     Children:
       - 11185295075021569558
   - Name: Empty Object
@@ -116,6 +117,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: O_Rock
     UUID: 9942069659115664186
     Active: true
@@ -127,10 +129,29 @@ GameObjects:
     Com_Transform:
       Translation: [0, 0, 0]
       Rotation: [0, -0, 0]
-      Scale: [0.200000107, 0.200000003, 0.200000107]
+      Scale: [0.100000001, 0.100000001, 0.100000001]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Rock\
       MeshFileName: DropRock.fbx
+      HasCollider: false
+      Equipment: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: O_Rock2
+    UUID: 3243501784546130536
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, 2.09806442, 0]
+      Rotation: [0, -0, 0]
+      Scale: [0.0500000007, 0.0500000007, 0.0500000007]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Map\Rock\
+      MeshFileName: DropRock2.fbx
       HasCollider: false
       Equipment: false
     RenderGroup: 1
