--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -375,7 +375,7 @@
     </ClInclude>
     <ClInclude Include="..\Public\Element_Bomb.h">
       <Filter>05.Effect\FlogasDungeon</Filter>
-   </ClInclude>
+    </ClInclude>
     <ClInclude Include="..\Public\EffectBloodDecal.h">
       <Filter>05.Effect\Blood</Filter>
     </ClInclude>
@@ -384,6 +384,15 @@
     </ClInclude>
     <ClInclude Include="..\public\SparkFlare.h">
       <Filter>05.Effect\PlayerEffect\SparkFlare</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\Winds.h">
+      <Filter>05.Effect\PlayerEffect\Winds</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\ChargeAxe.h">
+      <Filter>05.Effect\PlayerEffect\Charge</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\AuraEffect.h">
+      <Filter>05.Effect\PlayerEffect\AuraEffect</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -755,6 +764,15 @@
     </ClCompile>
     <ClCompile Include="..\private\SparkFlare.cpp">
       <Filter>05.Effect\PlayerEffect\SparkFlare</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\Winds.cpp">
+      <Filter>05.Effect\PlayerEffect\Winds</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\ChargeAxe.cpp">
+      <Filter>05.Effect\PlayerEffect\Charge</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\AuraEffect.cpp">
+      <Filter>05.Effect\PlayerEffect\AuraEffect</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1146,6 +1164,15 @@
     </Filter>
     <Filter Include="05.Effect\PlayerEffect\SparkFlare">
       <UniqueIdentifier>{f98f9085-81a3-442d-bca2-817724732e2d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\PlayerEffect\Winds">
+      <UniqueIdentifier>{35761ae9-ae77-49b4-be0b-47f199f079b5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\PlayerEffect\Charge">
+      <UniqueIdentifier>{873cd8dc-9c2c-425b-bb61-2215f9461b9c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\PlayerEffect\AuraEffect">
+      <UniqueIdentifier>{a6f523b4-a235-4b65-abe0-95078fca832e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
