--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -85,44 +85,6 @@ GameObjects:
       Equipment: false
     RenderGroup: 1
     FrustumRange: 1
-  - Name: SwordTrail
-    UUID: 9457659901954761343
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: true
-    Com_Transform:
-      Translation: [1.55694079, -0.13206704, 1.43441713]
-      Rotation: [7.739151, -19.8973255, 0]
-      Scale: [0.0184327047, 0.179167718, 0.174637258]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\LV_ElRano_Object_SpermaPropB_E_LBR.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Trun_FX_Trail01_TEX_HKJ.jpg
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AEAura.jpg
-      TextureNormalPath: ""
-      ScrollSpeedX: [0.5, 0.5, 0]
-      ScrollSpeedY: [0, 0, 0]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 4
-      DistortionBias: 1
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      Alpha: 1
   - Name: shoulderEffect
     UUID: 16360291868176570978
     Active: true
@@ -132,7 +94,7 @@ GameObjects:
     PassIndex: 6
     BillBord: false
     Com_Transform:
-      Translation: [-0.0728855953, 0.122553416, 3.44368935]
+      Translation: [-3.70074534, 0.122553416, 2.1273663]
       Rotation: [0, -0, 0]
       Scale: [1.29999995, 1.29999995, 3]
     Com_Model:
@@ -164,95 +126,6 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       Alpha: 1
-  - Name: Empty Object
-    UUID: 871248331654702282
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 9
-    BillBord: false
-    Com_Transform:
-      Translation: [2, 0, 2]
-      Rotation: [-90, -0, 0]
-      Scale: [0.499721825, 0.49999848, 0.50000006]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: BombBeam3.fbx
-      HasCollider: false
-      EffectFilePath: ""
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\DooMask\FX_SparkLand_001_TEX_HKB.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\DooMask\FX_spark_002.png
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: true
-      FadeOutDuration: 1
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 1
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      Alpha: 1
-  - Name: SpartParticle
-    UUID: 6548545933346460148
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [0.274112403, 6.51797194e-09, -0.0137290694]
-      Rotation: [11.163949, 2.86729074, 1.36240385e-06]
-      Scale: [0.999976158, 0.99999994, 0.99999553]
-    Com_RectInstance:
-      Shape: 0
-      InstNum: 100
-      Color: [1.00869751, 1.27833772, 0, 0]
-      Speed: 1
-      LifeTime: 1
-      Size: 10
-      StartRadian: 0
-      RadiationAngle: 30
-      LerpColor: true
-      SrcColor: [0.978260875, 0, 0, 0]
-      DestColor: [1, 0.913043439, 0, 0]
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Spark.dds
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      Alpha: 1
   - Name: Flare
     UUID: 4844422747993476240
     Active: true
@@ -262,9 +135,9 @@ GameObjects:
     PassIndex: 1
     BillBord: true
     Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [7.739151, -19.8973255, 0]
-      Scale: [0.18380861, 0.184949234, 0.202053934]
+      Translation: [-3.68122411, -3.21823137e-07, -0.665211558]
+      Rotation: [57.9792862, -85.7000504, 2.84675707e-06]
+      Scale: [0.184029356, 0.185144559, 0.202307388]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -291,54 +164,6 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       Alpha: 1
-  - Name: Empty Object
-    UUID: 9403709492189874010
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Com_RectInstance:
-      Shape: 0
-      InstNum: 100
-      Color: [0.956521332, 0.77751112, 0.499059826, 0]
-      Speed: 10
-      LifeTime: 0.200000003
-      Size: 0.200000003
-      StartRadian: 0
-      RadiationAngle: 30
-      LerpColor: true
-      SrcColor: [1, 0.956521749, 0, 0]
-      DestColor: [0.956521749, 0.777512908, 0.499054819, 0]
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Spark.dds
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      Alpha: 1
   - Name: AuraEffect
     UUID: 4172193352215827146
     Active: true
@@ -348,9 +173,9 @@ GameObjects:
     PassIndex: 1
     BillBord: true
     Com_Transform:
-      Translation: [-0.361666203, 0.308779806, 0.419353843]
-      Rotation: [7.739151, -19.8973236, 0]
-      Scale: [0.89745611, 0.897895455, 0.90395093]
+      Translation: [-3.88122892, 0.308779508, 0.522710443]
+      Rotation: [57.9792786, -85.7000504, 2.84675707e-06]
+      Scale: [0.89853096, 0.898841739, 0.905064166]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -386,9 +211,9 @@ GameObjects:
     PassIndex: 1
     BillBord: false
     Com_Transform:
-      Translation: [2.77998614, 0, 0.603386521]
+      Translation: [-3.45907974, 2.72718154e-07, 4.04530668]
       Rotation: [0, -0, -90]
-      Scale: [1, 1.10000002, 1.09870398]
+      Scale: [1, 1.10000002, 1.0986774]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: untitled.fbx
@@ -418,47 +243,6 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       Alpha: 1
-  - Name: ChargeEffect
-    UUID: 1296769625081533315
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 7
-    BillBord: false
-    Com_Transform:
-      Translation: [0.952855527, 0.472428411, -0.977482796]
-      Rotation: [0, -0, 0]
-      Scale: [0.100000001, 0.100000001, 0.100000001]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: TwistMesh3.fbx
-      HasCollider: false
-      EffectFilePath: ""
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Trail_TEX_020_CJH.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AuraTile_001_TEX_KKJ1.png
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: true
-      FadeOutDuration: 0.300000012
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0.300000012
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      Alpha: 1
   - Name: testMonster
     UUID: 8617912300921592626
     Active: true
@@ -468,7 +252,7 @@ GameObjects:
     PassIndex: 0
     NumOBB: 2
     Com_Transform:
-      Translation: [-0.898385525, -0.192382172, 1.40212929]
+      Translation: [-0.876446486, -0.172765255, 1.7319454]
       Rotation: [-36.7951431, -84.9008484, 41.8016281]
       Scale: [1, 0.999994397, 0.999999881]
     Com_Collider:
