--- a/Assets/Scenes/Seov.yaml
+++ b/Assets/Scenes/Seov.yaml
@@ -95,8 +95,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.55694079, -0.13206704, 1.43441713]
-      Rotation: [7.77322435, 59.502037, 0]
-      Scale: [0.0184311606, 0.179158494, 0.174642324]
+      Rotation: [12.9305954, 36.3395157, 1.0599033e-06]
+      Scale: [0.0184314046, 0.179053769, 0.174380779]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -175,7 +175,7 @@ GameObjects:
     Com_Transform:
       Translation: [2, 0, 2]
       Rotation: [-90, -0, 0]
-      Scale: [0.499721795, 0.49999848, 0.50000006]
+      Scale: [0.499691069, 0.49999848, 0.50000006]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: BombBeam3.fbx
@@ -220,7 +220,7 @@ GameObjects:
     Com_RectInstance:
       Shape: 0
       InstNum: 100
-      Color: [0.978260875, 0, 0, 0]
+      Color: [1.01525736, 1.55385113, 0, 0]
       Speed: 1
       LifeTime: 1
       Size: 10
@@ -263,8 +263,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0, 0, 0]
-      Rotation: [7.77322626, 59.502037, 0]
-      Scale: [0.183793247, 0.184939861, 0.20205982]
+      Rotation: [12.9305964, 36.3395157, 1.0599033e-06]
+      Scale: [0.183795854, 0.184832275, 0.201760158]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -306,7 +306,7 @@ GameObjects:
     Com_RectInstance:
       Shape: 0
       InstNum: 100
-      Color: [0.934688568, 0.687621117, 0.749662161, 0]
+      Color: [0.992753327, 0.926685631, 0.083179459, 0]
       Speed: 10
       LifeTime: 0.200000003
       Size: 0.200000003
@@ -349,8 +349,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-0.361666203, 0.308779806, 0.419353843]
-      Rotation: [7.77322531, 59.502037, 0]
-      Scale: [0.897381544, 0.897847474, 0.903977871]
+      Rotation: [12.9305954, 36.3395157, 1.0599033e-06]
+      Scale: [0.897392869, 0.897320926, 0.902624786]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -388,7 +388,7 @@ GameObjects:
     Com_Transform:
       Translation: [2.77998614, 0, 0.603386521]
       Rotation: [0, -0, -90]
-      Scale: [1, 1.10000002, 1.09870386]
+      Scale: [1, 1.10000002, 1.09868693]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: untitled.fbx
