--- a/Assets/Scenes/Dungeon1_SY.yaml
+++ b/Assets/Scenes/Dungeon1_SY.yaml
@@ -65,3 +65,129 @@ GameObjects:
     HasCollider: false
     RenderGroup: 1
     FrustumRange: 500
+  - Name: E_BossFly
+    UUID: 17518711397983542551
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 11
+    BillBord: false
+    Com_Transform:
+      Translation: [0, -1.37941146, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1.5, 4, 1.5]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: cylinder_twist.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\002.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\002.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Wind001_TEX_HKJ.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_smoke_006_TEX_CJH.tga
+      TextureNormalPath: ""
+      ScrollSpeedX: [0.800000012, 0, 0]
+      ScrollSpeedY: [1.70000005, 0.800000012, 2.29999995]
+      Distortion1: [0.200000003, 0.300000012]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.100000001
+      DistortionBias: 0.400000006
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 1
+    Children:
+      - 15749405828150755439
+      - 11763209857370163464
+  - Name: Circle
+    UUID: 15749405828150755439
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 4
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.0486830473, 0.0500000007, -0.100185335]
+      Rotation: [0, -0, 0]
+      Scale: [18, 1, 18]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: Circle.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_wind_004_TEX_CJH.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\test.jpg
+      TextureNormalPath: ..\..\Assets\Textures\Effect\Normal\Test.dds
+      ScrollSpeedX: [-0.300000012, -0.200000003, 0]
+      ScrollSpeedY: [-0.200000003, 0, 2.29999995]
+      Distortion1: [0.200000003, 0.800000012]
+      Distortion2: [0.400000006, 0.300000012]
+      Distortion3: [0.100000001, 0.800000012]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.400000006
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 1
+  - Name: dome
+    UUID: 11763209857370163464
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 8
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.149278611, 3.76999998, 0]
+      Rotation: [0, -0, 0]
+      Scale: [8, 7, 8]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: dome.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\teaa.dds
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_Noise_002_TEX_HKB_1.png
+      TextureNormalPath: ""
+      ScrollSpeedX: [0.100000001, 0.100000001, 0]
+      ScrollSpeedY: [0, 0, 2.29999995]
+      Distortion1: [0.300000012, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.200000003
+      DistortionBias: 0.100000001
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 0.699999988
