--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -211,6 +211,10 @@
     <ClInclude Include="..\Public\Element_Bomb.h" />
     <ClInclude Include="..\Public\Fire_Boob.h" />
     <ClInclude Include="..\Public\Fire_explosion.h" />
+    <ClInclude Include="..\Public\FlyLight.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="..\Public\MeteoFireBall.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
@@ -383,6 +387,10 @@
     <ClCompile Include="..\Private\Fire_explosion.cpp" />
     <ClCompile Include="..\Private\Flogas.cpp" />
     <ClCompile Include="..\Private\FlogasDunDoor.cpp" />
+    <ClCompile Include="..\Private\FlyLight.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\private\Gold.cpp" />
     <ClCompile Include="..\private\Glove.cpp" />
     <ClCompile Include="..\private\GoldAxe.cpp" />
